# trt-segmentation

./: .gitignore  .pylintrc  CMakeLists.txt  README.md  requirements.txt  requirements_oldgpu.txt
cmake/: FindTensorRT.cmake
include/: Instrumentor.h  processor.h  segmentation.h  utils.h
src/: main.cpp  processor.cpp  segmentation.cpp  utils.cpp
trtconverter/: trtconverter.py
